--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "coder-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,11 +8,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "^0.70.5",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
