--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "coder-app",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "^47.0.13",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "^0.70.5",
-    "react-native-web": "~0.18.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
-  },
-  "private": true
+	"name": "coder-app",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"expo": "^47.0.13",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "^0.70.5",
+		"react-native-web": "~0.18.9"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@types/react": "~18.0.14",
+		"@types/react-native": "~0.70.6",
+		"@typescript-eslint/eslint-plugin": "^5.48.2",
+		"eslint": "^8.32.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^31.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.1",
+		"typescript": "^4.9.4"
+	},
+	"private": true
 }
