--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "coder-app",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
-    "expo": "^47.0.13",
-    "expo-font": "~11.0.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "^0.70.5",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
-    "react-native-web": "~0.18.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^4.9.4"
-  },
-  "private": true
+	"name": "coder-app",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-navigation/native": "^6.1.3",
+		"@react-navigation/native-stack": "^6.9.9",
+		"expo": "^47.0.13",
+		"expo-font": "~11.0.1",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "^0.70.5",
+		"react-native-safe-area-context": "^4.5.0",
+		"react-native-screens": "^3.19.0",
+		"react-native-web": "~0.18.9"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@types/react": "~18.0.14",
+		"@types/react-native": "~0.70.6",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-native": "^4.0.0",
+		"prettier": "2.8.3",
+		"typescript": "^4.9.5"
+	},
+	"private": true
 }
