--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,10 @@
 	"extends": "expo/tsconfig.base",
 	"compilerOptions": {
 		"strict": true
-	}
+	},
+	"parserOptions": {
+		"project": "./tsconfig.json"
+	},
+	"include": ["babel.config.js"],
+	"plugins": ["@typescript-eslint"]
 }
