--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,12 @@
 	"overrides": [],
 	"parserOptions": {
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": "./tsconfig.json"
 	},
 	"plugins": ["react"],
-	"rules": {}
+	"rules": {
+		"react/react-in-jsx-scope": "off",
+		"@typescript-eslint/consistent-type-definitions": "off"
+	}
 }
