--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.1.3",
 		"@react-navigation/native-stack": "^6.9.9",
+		"@typescript-eslint/parser": "^5.50.0",
 		"expo": "^47.0.13",
 		"expo-font": "~11.0.1",
 		"expo-status-bar": "~1.4.2",
