--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-navigation/bottom-tabs": "^6.5.4",
 		"@react-navigation/native": "^6.1.3",
 		"@react-navigation/native-stack": "^6.9.9",
 		"@typescript-eslint/parser": "^5.50.0",
