--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"react-native-screens": "~3.18.0",
 		"react-native-web": "~0.18.9",
 		"react-redux": "^8.0.5",
-		"redux": "^4.2.1"
+		"redux": "^4.2.1",
+		"redux-thunk": "^2.4.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
