--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-permissions": "^14.0.0",
+    "expo-sqlite": "^11.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -27,7 +28,8 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-network": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
