--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-file-system": "~15.1.1",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
+    "expo-network": "~5.0.0",
     "expo-permissions": "^14.0.0",
     "expo-sqlite": "^11.0.0",
     "expo-status-bar": "~1.4.2",
@@ -28,8 +29,7 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "expo-network": "~5.0.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
